# cpp_les

0412_lesson/: CMakeLists.txt  main.cpp
0612sc/: CMakeLists.txt  main.cpp
0812/: CMakeLists.txt  funcs.cpp  funcs.h  main.cpp
20112021/: 06112021.cpp  20112021.cpp  27112021.cpp  CMakeLists.txt  MyOOR.cpp  MyOOR.h  NumberIsNegativeException.cpp  NumberIsNegativeException.h  NumberIsTooBigException.cpp  NumberIsTooBigException.h  Point2D.cpp  Point2D.h
CPP_LESSONS-master/: 06112021.cpp  13112021.cpp  CMakeLists.txt  Figure.h  Fraction.cpp  Fraction.h  FractionAdder.cpp  FractionAdder.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
project_1/: CMakeLists.txt  main.cpp
